# trajectory-trace-client

./: README.md  graphql_example_last10_sensordata.py  graphql_example_subscription.py  pyproject.toml
examples/: config.yaml  example.py  graphql_example.py  mqtt_example.py  publish_event.json  publish_sensor.json  publish_trajectory.json
trajectory_trace/: __init__.py  graphql_client.py
trajectory_trace_client/: auth.py  mqtt_client.py
